--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome-loader": "0.0.1",
     "history": "^1.13.0",
     "html-webpack-plugin": "^1.6.2",
+    "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jquery": "^2.2.4",
     "jsdom": "^7.0.2",
