--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "time-grunt": "~0.3.1",
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-ng-scenario": "^0.1.0",
-    "karma-jasmine": "^0.1.5",
+    "jasmine": "~2.6.0",
     "grunt-karma": "^0.8.2",
     "grunt-zip": "~0.10.0",
     "connect-modrewrite": "^0.5.11",
@@ -63,6 +63,7 @@
     "grunt-contrib-compress": "^0.10.0",
     "karma-firefox-launcher": "~0.1.3",
     "karma-chrome-launcher": "~0.1.4",
+    "karma-coverage": "~1.1.1",
     "grunt-githash": "~0.1.3",
     "grunt-checkrepo": "~0.1.0"
   },
