--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "homepage": "https://github.com/gjlacerda/querotrabalharnoapontador#readme",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.3.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.1.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
