--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^4.3.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
+    "styled-components": "^2.1.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
