--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quero Trabalhar no Apontador! =============================",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": "git+https://github.com/gjlacerda/querotrabalharnoapontador.git",
   "author": "Guilherme Lacerda",
@@ -16,13 +16,16 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "eslint": "^4.3.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
+    "jest-cli": "^20.0.4",
     "styled-components": "^2.1.1",
     "vanilla-masker": "^1.2.0",
     "webpack": "^3.4.1",
@@ -31,5 +34,10 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
+  },
+  "jest": {
+    "modulePaths": [
+      "src"
+    ]
   }
 }
