--- a/package.json
+++ b/package.json
@@ -6,7 +6,23 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "collectCoverageFrom": [
+      "__tests__/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 50,
+        "branches": 50,
+        "functions": 50,
+        "lines": 100
+      }
+    }
   },
   "repository": {
     "type": "git",
@@ -19,7 +35,6 @@
   },
   "homepage": "https://github.com/nathanqueija/querotrabalharnoapontador#readme",
   "dependencies": {
-    "classnames": "^2.2.5",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^3.2.2",
     "next-redux-wrapper": "^1.3.4",
@@ -29,19 +44,27 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
+    "babel-core": "^6.26.0",
     "babel-plugin-css-modules-transform": "^1.2.7",
     "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-styled-components": "^1.2.0",
     "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
+    "babel-preset-env": "^1.6.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.0",
+    "jest": "^21.2.1",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.12",
     "postcss-cssnext": "^3.0.2",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.6",
+    "react-test-renderer": "^15.6.2",
     "sass-loader": "^6.0.6"
   }
 }
